tests/files/flow_controller_tests/should_fail/060.cmdr
x = false;
print sinh(x);